--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.app {
+  background-color: black;
+}
 .App {
   text-align: center;
 }
@@ -31,9 +34,9 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px)
+    transform: translateY(10px);
   }
   100% {
-    transform: translateY(0px)
+    transform: translateY(0px);
   }
 }
